add article template

--- a/config.toml
+++ b/config.toml
@@ -1,3 +1,3 @@
-baseURL = "http://example.org/"
+baseURL = "http://chess-master-walrus-12138.netlify.com/"
 languageCode = "en-us"
 title = "My New Hugo Site"
