--- a/assets/admin/config.yml
+++ b/assets/admin/config.yml
@@ -1,7 +1,7 @@
 backend:
   name: github
   repo: https://github.com/brightonmike/MichaelSite
-  branch: Deploy
+  branch: master
 publish_mode: editorial_workflow
 media_folder: "static/images/uploads" # Media files will be stored in the repo under static/images/uploads
 public_folder: "/images/uploads" # The src attribute for uploaded media will begin with /images/uploads
