--- a/config.toml
+++ b/config.toml
@@ -1,3 +1,4 @@
 baseURL = "https://chess-master-walrus-12138.netlify.com/"
 languageCode = "en-us"
+relativeURLs = "true"
 title = "My New Hugo Site"
