--- a/assets/admin/config.yml
+++ b/assets/admin/config.yml
@@ -4,7 +4,7 @@ backend:
   branch: master
 publish_mode: editorial_workflow
 media_folder: "static/images/uploads" # Media files will be stored in the repo under static/images/uploads
-public_folder: "/images/uploads" # The src attribute for uploaded media will begin with /images/uploads
+public_folder: "../images/uploads" # The src attribute for uploaded media will begin with /images/uploads
 collections: # A list of collections the CMS should be able to edit
   - name: "posts" # Used in routes, ie.: /admin/collections/:slug/edit
     label: "Post" # Used in the UI, ie.: "New Post"
