--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
 baseURL = "https://michael.netlify.com/"
 languageCode = "en-us"
-relativeURLs = "true"
+relativeURLs = "false"
 title = "My New Hugo Site"
