--- a/config.yml
+++ b/config.yml
@@ -1,3 +1,3 @@
 baseURL: "https://michael.netlify.com/"
 languageCode: "en-gb"
-title: "My New Hugo Site"
+title: "Michael Gunner - Frontend Developer"
