--- a/config.yml
+++ b/config.yml
@@ -1,3 +1,3 @@
-baseURL: "http://michaelgunner.co.uk/"
+baseURL: "https://michaelgunner.co.uk/"
 languageCode: "en-gb"
 title: "Michael Gunner - Frontend Developer"
