--- a/config.yml
+++ b/config.yml
@@ -1,3 +1,3 @@
-baseURL: "https://michael.netlify.com/"
+baseURL: "http://michael.netlify.com/"
 languageCode: "en-gb"
 title: "Michael Gunner - Frontend Developer"
