--- a/package.json
+++ b/package.json
@@ -3,19 +3,20 @@
   "version": "1.0.0",
   "author": "Michael Gunner",
   "devDependencies": {
+    "babel-core": "^6.26.0",
     "babel-preset-es2015": "^6.5.0",
-    "browser-sync": "^2.11.0",
-    "bullets-sass": "^3.1.0",
+    "browser-sync": "^2.23.5",
+    "bullets-sass": "^6.1.0",
     "gulp": "^3.9.0",
-    "gulp-autoprefixer": "^2.3.1",
-    "gulp-babel": "^6.1.2",
+    "gulp-autoprefixer": "^4.1.0",
+    "gulp-babel": "^7.0.0",
     "gulp-bower": "0.0.10",
     "gulp-concat": "^2.5.2",
     "gulp-cssnano": "^2.1.1",
     "gulp-jshint": "^1.11.0",
     "gulp-plumber": "^1.0.1",
     "gulp-rename": "^1.2.2",
-    "gulp-sass": "^2.3.2",
+    "gulp-sass": "^3.1.0",
     "gulp-sourcemaps": "^1.6.0",
     "gulp-uglify": "^1.2.0",
     "gulp-util": "^3.0.5",
