--- a/package.json
+++ b/package.json
@@ -3,24 +3,26 @@
   "version": "1.0.0",
   "author": "Michael Gunner",
   "devDependencies": {
-    "babel-core": "^6.26.0",
+    "autoprefixer": "^8.6.4",
+    "babel-core": "^6.26.3",
     "babel-preset-es2015": "^6.5.0",
-    "browser-sync": "^2.23.5",
+    "browser-sync": "^2.24.5",
     "bullets-sass": "^6.1.0",
     "gulp": "^3.9.0",
-    "gulp-autoprefixer": "^4.1.0",
     "gulp-babel": "^7.0.0",
-    "gulp-bower": "0.0.10",
+    "gulp-bower": "0.0.14",
     "gulp-concat": "^2.5.2",
     "gulp-cssnano": "^2.1.1",
     "gulp-jshint": "^1.11.0",
     "gulp-plumber": "^1.0.1",
+    "gulp-postcss": "^7.0.1",
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^3.1.0",
     "gulp-sourcemaps": "^1.6.0",
     "gulp-uglify": "^1.2.0",
     "gulp-util": "^3.0.5",
     "jshint-stylish": "^2.0.0",
+    "postcss-scss": "^1.0.6",
     "stylelint": "^7.3.1",
     "stylelint-config-standard": "^13.0.2"
   }
